cfn-templates/jenkins.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Jenkins Stack
Parameters:
  Project:
    Type: String

  TraineeName:
    Type: String

  PublicHostedZoneName:
    Description: The Route53 Zone in which to create records
    Type: String

  AmiID:
    Type: String
    Description: 'AMI ID'

  InstanceType:
    Description: The Instance type which used to build stack.
    Type: String

  ASGMaxSize:
    Description: AutoScaling max size
    Type: Number
    Default: 1

  ASGMinSize:
    Description: AutoScaling min size
    Type: Number
    Default: 1

  SSLCertArn:
    Description: Cetificate for domain.
    Type: String

  ResourceBucketName:
    Description: Name of the S3 bucket containing all rpm packages
    Type: String

Resources:
  InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
      - !Ref Role

  Role:
    Type: AWS::IAM::Role
    Properties:
      Path: /
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service: [ec2.amazonaws.com]
          Action:
          - sts:AssumeRole
      Policies:
      - PolicyName: permit-cfn
        PolicyDocument:
          Statement:
          - Effect: Allow
            Action:
              - cloudformation:Describe*
              - cloudformation:Get*
              - cloudformation:List*
            Resource: '*'
          - Effect: Allow
            Action:
              - s3:*
            Resource:
              - !Sub 'arn:aws:s3:::${ResourceBucketName}/*'

  LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub "jenkins-alb-${TraineeName}"
      Scheme: internet-facing
      Subnets:
        - "Fn::ImportValue": !Sub "${Project}-public-subnet-a"
        - "Fn::ImportValue": !Sub "${Project}-public-subnet-b"
      SecurityGroups:
        - Ref: ALBConnectionSecurityGroup

  ALBConnectionSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allowing Jenkins client connection
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        IpProtocol: tcp
        FromPort: 80
        ToPort: 80
      - CidrIp: 0.0.0.0/0
        IpProtocol: tcp
        FromPort: 443
        ToPort: 443
      VpcId:
        "Fn::ImportValue": !Sub "${Project}-vpc-id"

  ALBHTPPListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn:
            Ref: ALBTargetGroup
      LoadBalancerArn:
        Ref: LoadBalancer
      Port: 80
      Protocol: HTTP

  ALBHTPPSListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref LoadBalancer
      Port: 443
      Protocol: HTTPS
      DefaultActions:
      - Type: forward
        TargetGroupArn: !Ref ALBTargetGroup
      Certificates:
      - CertificateArn: !Ref SSLCertArn

  ALBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 5
      Matcher:
        HttpCode: 200
      Name: !Sub 'target-group-${TraineeName}'
      Protocol: HTTP
      Port: 8080
      HealthCheckPath: '/login'
      UnhealthyThresholdCount: 3
      VpcId:
        "Fn::ImportValue": !Sub "${Project}-vpc-id"
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: 120

  JenkinsASGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      VPCZoneIdentifier:
        - "Fn::ImportValue": !Sub "${Project}-private-subnet-a"
        - "Fn::ImportValue": !Sub "${Project}-private-subnet-b"
      LaunchConfigurationName: !Ref JenkinsASLaunchConf
      MinSize: !Ref ASGMinSize
      MaxSize: !Ref ASGMaxSize
      TargetGroupARNs:
        - !Ref ALBTargetGroup
      Tags:
        - Key: Name
          Value: !Sub "${Project}-jenkins-${TraineeName}"
          PropagateAtLaunch: true

  JenkinsASLaunchConf:
    Type: AWS::AutoScaling::LaunchConfiguration
    Metadata:
      AWS::CloudFormation::Init:
        configSets:
          InstallAndRun: [Install]
        Install:
          files:
            /usr/local/bin/jenkins-restore:
              content: !Sub |
                #!/bin/bash -e
                USAGE="Usage: $0 S3_TARGET JENKINS_HOME"

                S3_TARGET=$1
                JENKINS_HOME=$2

                if [[ -z "`echo $S3_TARGET | grep '^s3://'`" ]]; then
                  echo -e $USAGE
                  exit 1
                fi

                if [[ $S3_TARGET == */ ]]; then
                  S3_TARGET=$S3_TARGET`aws s3 ls $S3_TARGET | tail -1 | awk '{print $NF}'`
                fi

                LOCAL_BACKUP=/tmp/`basename $S3_TARGET`
                if [[ -d "$LOCAL_BACKUP" ]]; then
                  rm -rf $LOCAL_BACKUP
                fi

                aws s3 cp $S3_TARGET $LOCAL_BACKUP

                if [[ -d "$JENKINS_HOME" ]]; then
                  rm -rf $JENKINS_HOME
                fi

                mkdir -p $JENKINS_HOME

                tar zxf $LOCAL_BACKUP -C $JENKINS_HOME
                rm -f $LOCAL_BACKUP
              mode: '000755'
              owner: root
              group: root
            /usr/local/bin/jenkins-backup:
              content: !Sub |
                #!/bin/bash -e
                USAGE="Usage: $0 JENKINS_HOME S3_TARGET"

                JENKINS_HOME=$1
                S3_TARGET=$2

                if [[ -z "`echo $S3_TARGET | grep '^s3://'`" || ! -d "$JENKINS_HOME" ]]; then
                  echo -e $USAGE
                  exit 1
                fi

                LOCAL_BACKUP=/tmp/`basename $S3_TARGET`

                tar -C $JENKINS_HOME -zcf $LOCAL_BACKUP . \
                  --exclude "config-history/" \
                  --exclude "config-history/*" \
                  --exclude "jobs/*/workspace*" \
                  --exclude "jobs/*/builds/*/archive" \
                  --exclude "plugins/*/*" \
                  --exclude "plugins/*.bak" \
                  --exclude "war" \
                  --exclude "cache"

                aws s3 cp $LOCAL_BACKUP $S3_TARGET
                rm -f $LOCAL_BACKUP
              mode: '000755'
              owner: root
              group: root
    Properties:
      ImageId: !Ref AmiID
      InstanceType: !Ref InstanceType
      KeyName: !Ref Project
      IamInstanceProfile: !Ref InstanceProfile
      SecurityGroups:
      - !Ref JenkinsSSHSecurityGroup
      - !Ref JenkinsConnectionSecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -ex

          function error_exit
          {
            /opt/aws/bin/cfn-signal -e 1 -r $1 ${WaitHandle}
            exit 1
          }

          yum update -y

          /opt/aws/bin/cfn-init -s ${AWS::StackName} -r JenkinsASLaunchConf  --region ${AWS::Region} --configsets InstallAndRun --role ${Role}|| error_exit 'Failed to run cfn-init'

          echo "*/5 * * * * /usr/local/bin/jenkins-backup /var/lib/jenkins s3://${ResourceBucketName}/jenkins-`date +\%Y\%m\%d\%H\%M.tar.gz` >> /var/log/jenkins-backup.log 2>&1" >> /var/spool/cron/root

          /usr/local/bin/jenkins-restore s3://${ResourceBucketName}/ /var/lib/jenkins || true

          yum remove -y java-1.7.0-openjdk
          yum install -y java-1.8.0
          wget -O /etc/yum.repos.d/jenkins.repo http://pkg.jenkins-ci.org/redhat/jenkins.repo
          rpm --import https://jenkins-ci.org/redhat/jenkins-ci.org.key
          yum install -y jenkins
          service jenkins start
          /opt/aws/bin/cfn-signal -e 0 -r "Jenkins instance Stack Complete." '${WaitHandle}'

  JenkinsSSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allowing incoming on ssh port
      SecurityGroupIngress:
      - CidrIp:
          "Fn::ImportValue": !Sub "${Project}-vpc-cidr"
        IpProtocol: '-1'
        FromPort: 0
        ToPort: 0
      - CidrIp:
          "Fn::ImportValue": !Sub "${Project}-vpc-cidr"
        IpProtocol: tcp
        FromPort: 22
        ToPort: 22
      VpcId:
        "Fn::ImportValue": !Sub "${Project}-vpc-id"

  JenkinsConnectionSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allowing Jenkins client connection
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        IpProtocol: tcp
        FromPort: 8080
        ToPort: 8080
      VpcId:
        "Fn::ImportValue": !Sub "${Project}-vpc-id"

  WaitHandle:
    Type: AWS::CloudFormation::WaitConditionHandle

  WaitCondition:
    Type: AWS::CloudFormation::WaitCondition
    Properties:
      Handle: !Ref WaitHandle
      Timeout: 1500

  JenkinsDomainName:
    Type: AWS::Route53::RecordSet
    Properties:
      Name: !Sub "${TraineeName}.${PublicHostedZoneName}"
      HostedZoneName: !Ref PublicHostedZoneName
      Comment: !Sub "DomainName - ${TraineeName}"
      Type: CNAME
      TTL: 300
      ResourceRecords:
      - !GetAtt LoadBalancer.DNSName
